--- a/pages/actReg/actRegManList/actRegManList.wxml
+++ b/pages/actReg/actRegManList/actRegManList.wxml
@@ -15,7 +15,7 @@
         <view class='manListContentBottom'>
             <view class='contentBottomChild' bindtap='delActive' data-id='{{item.id}}' data-acttag='{{item.act_tag}}'><text class='iconfont icon-lajixiang'></text>删除</view>
             <view class='contentBottomChild' bindtap='toLessonEdit' data-id='{{item.id}}'><text class='iconfont icon-wodedingdan'></text>编辑</view>
-            <button class='contentBottomChild' hover-class='none' bindtap='sharePage' data-actid='{{item.id}}' data-title='{{item.title}}' ><text class='iconfont icon-share'></text>分享</button>
+            <button class='contentBottomChild' hover-class='none' data-acttag='{{item.act_tag}}' bindtap='sharePage' data-actid='{{item.id}}' data-title='{{item.title}}' ><text class='iconfont icon-share'></text>分享</button>
         </view>
     </view>
     <view class='manListBottom'>
