--- a/pages/manageCenters/manageCenter/manageCenter.wxml
+++ b/pages/manageCenters/manageCenter/manageCenter.wxml
@@ -1,6 +1,7 @@
 <view class='managWarp' style='display:{{isContent}}'>
     <view class='managWarpTop'>
         <image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/org_banner.png'></image>
+        <view bindtap='exitApp'><image src='../../../icon/exit.png' mode='scaleToFill'></image> <text>注销</text></view>
     </view>
     <view class='mangeScool'>
         <text class='mangeScoolTitle'>学校管理</text>
@@ -23,7 +24,7 @@
         </view>
     </view>
     <view class='managVersion'>
-        <text>智慧招生小程序</text>
+        <text>招生小程序</text>
         <text>{{versionData.version}}</text>
     </view>
 </view>
@@ -31,7 +32,7 @@
 <view class='loginPage' style='display:{{islogin}}'>
     <view class='empty'></view>
     <view class='loginWrapTitle'>
-        智慧招生小程序
+        招生小程序
     </view>
     <form bindsubmit='login'>
         <view class='loginWrapPhone'>
