--- a/pages/studentCenter/studentCenter.wxss
+++ b/pages/studentCenter/studentCenter.wxss
@@ -1,8 +1,8 @@
 @import '../../utils/iconFontO.wxss';
-.stuCenterWrap{
-    width:750rpx;
-    height:1110rpx;
-    background:#F2F2F2;
+page{
+    background:#fff;
+    position:relative;
+    height:100%;
 }
 .stuCenterTop{
     width:750rpx;
@@ -44,7 +44,7 @@
 }
 .stuCenterBottom{
     width:750rpx;
-    height:790rpx;
+    min-height:100rpx;
     background:#fff;
     margin-top:20rpx;
 }
@@ -58,10 +58,11 @@
 }
 .stuCenterBottomContent{
     width:750rpx;
-    height:750rpx;
+    min-height:150rpx;
 }
 .centerBottomContentWrap{
-    float:left;
+    display:inline-block;
+    vertical-align: top;
     width:183rpx;
     height:183rpx;
     border-right:1rpx solid #efefef;
@@ -101,13 +102,15 @@
 
 .managVersion{
     width:750rpx;
-    height:80rpx;
-    margin-top:-55rpx;
+    background:#fff;
+    position:absolute;
+    bottom:10rpx;
+    left:0rpx;
 }
 
 .managVersion text{
     display:block;
     font-size:24rpx;
     text-align:center;
-    color:#efefef;
+    color:#7b7b7b;
 }
