--- a/pages/manageCenters/manageCenter/manageCenter.wxss
+++ b/pages/manageCenters/manageCenter/manageCenter.wxss
@@ -1,8 +1,11 @@
 @import '../../../utils/iconFontO.wxss';
+page{
+    background:#fff;
+    padding-bottom:10rpx;
+}
 .managWarp{
     width:750rpx;
-    height:1207rpx;
-    background:#F2F2F2;
+    min-height:1207rpx;
 }
 .managWarpTop{
     width:750rpx;
@@ -42,7 +45,6 @@
     width:750rpx;
     min-height:248rpx;
     background:#fff;
-    margin-top:10rpx;
 }
 .mangeScoolTitle,.mangeStuMarktTitle{
     width:750rpx;
@@ -99,8 +101,6 @@
 .mangeStuMarktOptions{
     min-height:10rpx;
     width:738rpx;
-    /* border-left:1rpx solid #efefef; */
-    /* border-top:1rpx solid #efefef; */
     background:#fff;
 }
 .optionsTop{
@@ -126,20 +126,19 @@
 
 .managVersion{
     width:750rpx;
-    height:80rpx;
-    margin-top:-55rpx;
+    margin-top:30rpx;
 }
 
 .managVersion text{
     display:block;
     font-size:24rpx;
     text-align:center;
-    color:#efefef;
+    color:#7b7b7b;
 }
 
 .loginPage{
-    width:750rpx;
-    height:1207rpx;
+    width:100%;
+    height:100%;
     background:#fff;
     position:fixed;
     top:0rpx;
@@ -171,4 +170,9 @@
     width:600rpx;
     margin:0 auto;
     line-height:80rpx;
+}
+.addEmpty{
+    width:100%;
+    height:10rpx;
+    background:#f2f2f2;
 }
