--- a/pages/killPrices/killPricePerson/killPricePerson.wxss
+++ b/pages/killPrices/killPricePerson/killPricePerson.wxss
@@ -4,6 +4,7 @@
     background:#fff;
     background-size:100% 100%;
     background-repeat:repeat-y;
+    padding-bottom:20rpx;
 }
 .killPriceBanner{
     width:750rpx;
