--- a/pages/task/taskManList/taskManList.wxml
+++ b/pages/task/taskManList/taskManList.wxml
@@ -4,9 +4,9 @@
 <!-- 内容 -->
 <view class='emptyO'></view> 
 <view class='taskUserContent' wx:for='{{pageData}}' wx:key='{{item.id}}'>
-    <view class='taskUserStatus' bindtap='toInfo' data-courseid='{{item.id}}' style='background-color:{{item.bgColor}}'>{{item.status}}</view>
-    <view class='taskUserTitle' bindtap='toInfo' data-courseid='{{item.id}}' >{{item.title}}</view>
-    <view class='taskUserNum' bindtap='toInfo' data-courseid='{{item.id}}'>
+    <view class='taskUserStatus' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}' style='background-color:{{item.bgColor}}'>{{item.status}}</view>
+    <view class='taskUserTitle' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}'>{{item.title}}</view>
+    <view class='taskUserNum' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}'>
         <view>作业数<text> {{item.assignment_amount}} </text>次</view>
         <view>已提交<text> {{item.homework_amount}} </text>次</view>
     </view>
