--- a/pages/task/taskManList/taskManList.wxml
+++ b/pages/task/taskManList/taskManList.wxml
@@ -4,15 +4,15 @@
 <!-- 内容 -->
 <view class='emptyO'></view> 
 <view class='taskUserContent' wx:for='{{pageData}}' wx:key='{{item.id}}'>
-    <view class='taskUserStatus' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}' style='background-color:{{item.bgColor}}'>{{item.status}}</view>
-    <view class='taskUserTitle' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}'>{{item.title}}</view>
-    <view class='taskUserNum' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}'>
+    <view class='taskUserStatus' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}' data-starttime='{{item.start_time}}' data-endtime='{{item.end_time}}' data-title='{{item.title}}' style='background-color:{{item.bgColor}}'>{{item.status}}</view>
+    <view class='taskUserTitle' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}' data-starttime='{{item.start_time}}' data-endtime='{{item.end_time}}' data-title='{{item.title}}'>{{item.title}}</view>
+    <view class='taskUserNum' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}' data-starttime='{{item.start_time}}' data-endtime='{{item.end_time}}' data-title='{{item.title}}'>
         <view>作业数<text> {{item.assignment_amount}} </text>次</view>
         <view>已提交<text> {{item.homework_amount}} </text>次</view>
     </view>
     <view class='taskUserOptions'>
         <view data-id='0' bindtap='optionsBtn' data-title='{{item.title}}' data-actid='{{item.id}}' data-acttag='{{item.act_tag}}'><text>邀请学员</text></view>
-        <view data-id='1' bindtap='optionsBtn' data-courseid='{{item.id}}' data-title='{{item.title}}' data-timestring='{{item.start_time}}'><text>打卡日历</text></view>
+        <view data-id='1' bindtap='optionsBtn' data-courseid='{{item.id}}' data-pwd='{{item.password}}' data-timestring='{{item.start_time}}' data-title='{{item.title}}'><text>打卡日历</text></view>
         <view data-id='2' bindtap='optionsBtn' data-actid='{{item.id}}'><text style='color:#3C9ED1'>编辑课程</text></view>
         <view data-id='3' bindtap='optionsBtn' data-actid='{{item.id}}' ><text style='color:#C13624'>删除课程</text></view>
     </view>
