--- a/pages/videos/manVideoList/manVideoList.wxml
+++ b/pages/videos/manVideoList/manVideoList.wxml
@@ -13,7 +13,7 @@
     <view class='manListContentBottom'>
         <view class='contentBottomChild' bindtap='moveAct' data-tag='{{item.act_tag}}' data-id='{{item.id}}'><text class='iconfont icon-lajixiang'></text>删除</view>
         <view class='contentBottomChild' bindtap='toVideosEdit' data-actid='{{item.id}}'><text class='iconfont icon-wodedingdan'></text>编辑</view>
-        <view class='contentBottomChild' data-acttag='{{item.act_tag}}' bindtap='toSharePage' data-actid='{{item.id}}' data-title='{{item.title}}'><text class='iconfont icon-share'></text>分享</view>
+        <view class='contentBottomChild' data-acttag='{{item.act_tag}}' bindtap='toSharePage' data-url='{{item.banner_image_url}}' data-actid='{{item.id}}' data-title='{{item.title}}'><text class='iconfont icon-share'></text>分享</view>
     </view>
 </view>
 <view class='manListBottom'>
