--- a/pages/collectAct/collectActManList/collectActManList.wxss
+++ b/pages/collectAct/collectActManList/collectActManList.wxss
@@ -1,7 +1,6 @@
 @import '../../../utils/iconFont.wxss';
 page{
     background:#F2F2F2;
-    padding-bottom:110rpx;
 }
 /* 页面功能 */
 .manListOpt{
@@ -35,7 +34,7 @@ page{
     margin:20rpx auto 0rpx;
 }
 .contentTitle{
-    min-height:80rpx;
+    height:80rpx;
     width:710rpx;
     font-size:35rpx;
     text-indent:20rpx;
@@ -43,7 +42,7 @@ page{
 }
 .contentTitle view{
     float:left;
-    min-height:80rpx;
+    height:80rpx;
     line-height:80rpx;
 }
 .contentTitle view:nth-child(2){
@@ -61,11 +60,7 @@ page{
     float:left;
     margin-top:20rpx;
     margin-left:20rpx;
-    background:#fff;
-}
-.contetnMiddleLeft image{
-    width:400rpx;
-    height:200rpx;
+    background:lightblue;
 }
 .contetnMiddleRight{
     width:260rpx;
@@ -75,8 +70,9 @@ page{
     margin-top:20rpx;
 }
 .contetnMiddleRight>view{
-    font-size:22rpx;
+    font-size:20rpx;
     color:#7b7b7b;
+    margin-top:5rpx;
 }
 .contetnMiddleRight>view:nth-child(1){
     width:260rpx;
@@ -87,6 +83,9 @@ page{
     line-height:50rpx;
     border:0.5px solid #E9E9E9;
 }
+/* .contetnMiddleRight>view:nth-child(2){
+    margin-top:5rpx;
+} */
 .contetnMiddleRight>view:nth-child(1)>text{
     color:#BB3217;
 }
