--- a/utils/iconFontO.wxss
+++ b/utils/iconFontO.wxss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';  /* project id 679643 */
-  src: url('//at.alicdn.com/t/font_679643_lxiymfd2dxk.eot');
-  src: url('//at.alicdn.com/t/font_679643_lxiymfd2dxk.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_679643_lxiymfd2dxk.woff') format('woff'),
-  url('//at.alicdn.com/t/font_679643_lxiymfd2dxk.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_679643_lxiymfd2dxk.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_679643_toa03x55rn.eot');
+  src: url('//at.alicdn.com/t/font_679643_toa03x55rn.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_679643_toa03x55rn.woff') format('woff'),
+  url('//at.alicdn.com/t/font_679643_toa03x55rn.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_679643_toa03x55rn.svg#iconfont') format('svg');
 }
 .iconfont {
   font-family:"iconfont" !important;
@@ -13,6 +13,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.icon-dtweishouji:before { content: "\e68a"; }
 
 .icon-icon:before { content: "\e612"; }
 
